# ragsearch-mdfile-in-localpc

./: .env.example  .gitignore  README.md  SPEC.md  SPEC_DETAIL.md  SPEC_LOGIC.md  SPEC_VALIDATION.md  config.yaml  pyproject.toml  requirements.txt  task.md  test_chromadb.py  test_mcp_client.py
.claude/: settings.local.json
docs/api/: SPEC.md  SPEC_DETAIL.md  SPEC_LOGIC.md  SPEC_VALIDATION.md
docs/mcp/: IMPLEMENTATION_SUMMARY.md  SPEC_DETAIL.md
scripts/: start_api.bat  start_api.sh  start_mcp.bat  start_mcp.sh
src/: __init__.py  config.py  db.py  embedder.py  indexer.py  searcher.py  server.py
src/api/: __init__.py  app.py  dependencies.py  middleware.py
src/api/routers/: index.py  search.py
src/api/schemas/: index.py  search.py
src/frontend/: index.html
src/mcp/: __init__.py  server.py
src/shared/: __init__.py  chunker.py  config.py  db.py  embedder.py  indexer.py
test-docs/: error-handling.md  python-install.md  testing-guide.txt
test-docs/abc/: error-handling.md
tests/: test_chunker.py
tests/api/: __init__.py  test_index.py  test_search.py
tests/debug/: __init__.py  debug_chunker.py  debug_chunker_verbose.py  dump_chromadb.py  reindex_test_docs.py
